# shannon-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PHASE-E-ROADMAP.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  STREAMING_ADAPTER_VERIFICATION.md  build.rs  dead_code_full.txt  deny.toml  dist-workspace.toml  justfile  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tauri.conf.json  vitest.config.ts
crates/shannon-agent/: Cargo.toml
crates/shannon-agent/src/: main.rs
crates/shannon-agent/tests/: agent_tests.rs
crates/shannon-agents/: AGENT_PROCESSES.md  Cargo.toml
crates/shannon-agents/src/: agent_defs.rs  context.rs  coordinator.rs  custom_agent.rs  error.rs  executor.rs  isolation.rs  lib.rs  message.rs  message_history.rs  multi_agent.rs  persistence.rs  process_manager.rs  protocol.rs  remote_tools.rs  sub_agent.rs  summary.rs  task.rs  task_board.rs  task_tools.rs  teammate.rs  tmux.rs  worktree.rs
crates/shannon-agents/tests/: agent_config_tests.rs  agent_integration_tests.rs  agent_tests.rs  coordinator_integration_tests.rs  e2e_team_lifecycle_tests.rs  failure_tests.rs  integration_tests.rs  task_board_tests.rs  team_coordination_tests.rs
crates/shannon-api-protocol/: Cargo.toml
crates/shannon-api-protocol/src/: lib.rs
crates/shannon-api-protocol/tests/: wire.rs
crates/shannon-cli/: Cargo.toml
crates/shannon-cli/benches/: cli_benchmarks.rs
crates/shannon-cli/src/: lib.rs  loop_command.rs  main.rs  mcp_install.rs  notifications.rs  triggered_command.rs
crates/shannon-cli/tests/: cli_args_tests.rs  cli_e2e_tests.rs  cli_interactive_tests.rs  cli_live_tests.rs  cli_mock_tests.rs  cli_provider_scenario_tests.rs  cli_real_task_tests.rs  cli_task_tests.rs  live_tests.rs
crates/shannon-codegen/: Cargo.toml
crates/shannon-codegen/benches/: repomap_bench.rs
crates/shannon-codegen/src/: languages.rs  lib.rs  outline.rs  repomap.rs
crates/shannon-codegen/tests/: language_tests.rs  outline_tests.rs  repomap_tests.rs
crates/shannon-commands/: Cargo.toml
crates/shannon-commands/src/: builtin.rs  command.rs  context.rs  executor.rs  lib.rs  parser.rs  registry.rs  repl_command.rs
crates/shannon-commands/tests/: command_handler_tests.rs  integration_tests.rs  routine_command_tests.rs
crates/shannon-core/: Cargo.toml
crates/shannon-core-api/: Cargo.toml
crates/shannon-core-api/src/: api.rs  api_services.rs  lib.rs
crates/shannon-core-base/: Cargo.toml
crates/shannon-core-base/src/: error.rs  hooks.rs  lib.rs  message.rs  permissions.rs  settings.rs  state.rs
crates/shannon-core-diagnostics/: Cargo.toml
crates/shannon-core-diagnostics/src/: diagnostics.rs  doctor.rs  internal_logging.rs  lib.rs  notifier.rs
crates/shannon-core-maintenance/: Cargo.toml
crates/shannon-core-maintenance/src/: activity_manager.rs  ai_limits.rs  away_summary.rs  housekeeping.rs  lib.rs  policy_limits.rs  prevent_sleep.rs  rate_limit.rs  rate_limit_messages.rs
crates/shannon-core-memory/: Cargo.toml
crates/shannon-core-memory/src/: auto_dream.rs  error.rs  lib.rs  memory.rs  project_memory.rs  session_history.rs  session_transcript.rs  store.rs  types.rs
crates/shannon-core-tools/: Cargo.toml
crates/shannon-core-tools/src/: lib.rs  streaming_tool_executor.rs  tool_execution.rs  tool_hooks.rs  tools.rs
crates/shannon-core/benches/: compact_bench.rs  context_budget_bench.rs  core_benchmarks.rs  query_engine.rs  recording_benchmarks.rs
crates/shannon-core/src/: activity_manager.rs  ai_limits.rs  analytics.rs  api.rs  api_server.rs  api_services.rs  auto_dream_consolidation.rs  away_summary.rs  billing.rs  bridge_service.rs  checkpoint.rs  claude_md.rs  compact.rs  config_migration.rs  context_budget.rs  context_pressure.rs  credential_manager.rs  custom_profiles.rs  diagnostics.rs  doctor.rs  enhanced_suggestions.rs  error.rs  extract_memories.rs  feature_flags.rs  git_operation_tracking.rs  hooks.rs  housekeeping.rs  i18n.rs  internal_logging.rs  lib.rs  llm_classifier.rs  magic_docs.rs  mcp_advanced.rs  mcp_server_approval.rs  mcp_tool_adapter.rs  memory.rs  model_registry.rs  notifier.rs  oauth.rs  output_format.rs  (+51 more)
crates/shannon-core/tests/: api_integration.rs  checkpoint_tests.rs  compact_integration_tests.rs  compact_tests.rs  compaction_proptests.rs  compaction_quality_tests.rs  config_integration_tests.rs  config_precedence_tests.rs  context_budget_tests.rs  e2e_latency_tests.rs  e2e_ollama_compact.rs  error_chain.rs  fixture_validation.rs  hooks_system_tests.rs  llm_classifier_tests.rs  long_running.rs  mcp_integration.rs  multi_turn_conversation.rs  multi_turn_scenarios.rs  perf_regression.rs  perf_tests.rs  permission_classifier_tests.rs  permission_invariant_tests.rs  (+18 more)
crates/shannon-desktop/: Cargo.toml  EXPERIMENTAL.md  tauri.conf.json
crates/shannon-engine/: Cargo.toml
crates/shannon-mcp/: Cargo.toml
crates/shannon-skills/: Cargo.toml
crates/shannon-tool-interface/: Cargo.toml
crates/shannon-tools/: Cargo.toml
crates/shannon-types/: Cargo.toml  README.md  build.rs
crates/shannon-ui/: CLAUDE.md  Cargo.toml
desktop/: .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITIVE-ANALYSIS.md  Cargo.toml  EXPERIMENTAL.md  OPC-SCHEDULED-GAP-ANALYSIS.md  README.md  SCHEDULED-FIX-PLAN.md  deny.toml  tauri.conf.json
desktop/benches/: load_tests.rs
desktop/claudedocs/: comprehensive-audit-2026-06-29-r2.md  comprehensive-audit-2026-06-29.md
desktop/examples/: bench_lsp.rs  bench_opc.rs
desktop/routines/: nightly-doc-sync.toml  retro-aggregator.toml
desktop/scripts/: check-schema-sync.sh
desktop/src/: commands.rs  commands_connections.rs  commands_mcp.rs  commands_mobile_pairing.rs  commands_notifications.rs  commands_permissions.rs  commands_skill_candidates.rs  commands_tasks.rs  engine_discovery.rs  engine_discovery_commands.rs  extensions_commands.rs  gateway_service_probe.rs  gateway_supervisor.rs  lib.rs  lsp_commands.rs  main.rs  scheduled_commands.rs
desktop/tests/: commands_tests.rs
desktop/ui/: package.json  playwright.config.ts  tsconfig.json
(+1257 files in other folders)
