[package]
name = "shannon-desktop"
version = "0.2.5"
edition = "2024"
rust-version = "1.88"
description = "Shannon — your AI workspace (Tauri desktop app)"
license = "Apache-2.0"
authors = ["Shannon Code Contributors"]
repository = "https://github.com/shannon-agent/shannon-desktop"
homepage = "https://github.com/shannon-agent/shannon-desktop"

[features]
default = ["tauri"]
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-window-state", "dep:tauri-plugin-dialog"]

[dependencies]
# Shannon engine crates — pulled from the shannon-code git repo via subpath.
# Pinned to v0.5.1@ede2105 (.mcpb install security hardening + Sprint 5 MCP integration).
shannon-core = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-core", rev = "ede2105" }
shannon-types = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-types", rev = "ede2105" }
shannon-tools = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-tools", rev = "ede2105" }
shannon-mcp = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-mcp", rev = "ede2105" }
shannon-skills = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-skills", rev = "ede2105" }
shannon-agents = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-agents", rev = "ede2105" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tempfile = "3"
base64 = "0.22"
dirs = "5"
lsp-types = "0.95"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha2 = "0.10"
rand = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
percent-encoding = "2"

tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
mockito = "1"

[build-dependencies]
tauri-build = { version = "2", optional = true, features = [] }

[[bench]]
name = "load_tests"
harness = false
path = "benches/load_tests.rs"

[package.metadata.dist]
dist = false

[package.metadata.tauri]
# Tauri build configuration — these settings control the native window
productName = "Shannon Code"
identifier = "com.shannon-code.desktop"
window = { title = "Shannon Code", width = 1200, height = 800, minWidth = 800, minHeight = 600 }

# ---------------------------------------------------------------------------
# Dev-only local patches
# ---------------------------------------------------------------------------
# While shannon-code has not yet published the APIs desktop depends on
# (scheduled_worktree, new_cron, parse_cron, install_extension_file), we
# override the git deps with a side-by-side checkout at ../shannon-code.
# Anyone cloning desktop standalone (without the sibling checkout) will
# fall through to the git dep and currently cannot build — that's expected
# until shannon-code cuts a release containing those APIs.
[patch."ssh://git@github.com/shannon-agent/shannon-code.git"]
shannon-core = { path = "../shannon-code/crates/shannon-core" }
shannon-types = { path = "../shannon-code/crates/shannon-types" }
shannon-tools = { path = "../shannon-code/crates/shannon-tools" }
shannon-mcp = { path = "../shannon-code/crates/shannon-mcp" }
shannon-skills = { path = "../shannon-code/crates/shannon-skills" }

