[package]
name = "shannon-desktop"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Shannon — your AI workspace (Tauri desktop app)"
license = "Apache-2.0"
authors = ["Shannon Code Contributors"]
repository = "https://github.com/shannon-agent/shannon-desktop"
homepage = "https://github.com/shannon-agent/shannon-desktop"

[features]
default = ["tauri"]
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-window-state", "dep:tauri-plugin-dialog", "dep:tauri-plugin-notification"]

[dependencies]
# Shannon engine crates — pulled from the shannon-code git repo via subpath.
# Pinned to v0.5.5@00510a7 (C9 3 new templates, T7 retry/backoff, T5 presets,
# T2 permission prompt, T3 agent exit).
shannon-core = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-core", rev = "00510a7" }
shannon-types = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-types", rev = "00510a7" }
shannon-tools = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-tools", rev = "00510a7" }
shannon-mcp = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-mcp", rev = "00510a7" }
shannon-skills = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-skills", rev = "00510a7" }
shannon-agents = { git = "ssh://git@github.com/shannon-agent/shannon-code.git", subpath = "crates/shannon-agents", rev = "00510a7" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tempfile = "3"
base64 = "0.22"
dirs = "5"
toml = "0.8"
lsp-types = "0.95"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha2 = "0.10"
rand = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
percent-encoding = "2"

tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
mockito = "1"

[build-dependencies]
tauri-build = { version = "2", optional = true, features = [] }

[[bench]]
name = "load_tests"
harness = false
path = "benches/load_tests.rs"

[package.metadata.dist]
dist = false

[package.metadata.tauri]
# Tauri build configuration — these settings control the native window
productName = "Shannon Code"
identifier = "com.shannon-code.desktop"
window = { title = "Shannon Code", width = 1200, height = 800, minWidth = 800, minHeight = 600 }

# ---------------------------------------------------------------------------
# Dev-only local patches
# ---------------------------------------------------------------------------
# While shannon-code has not yet published the APIs desktop depends on
# (scheduled_worktree, new_cron, parse_cron, install_extension_file), we
# override the git deps with a side-by-side checkout at ../shannon-code.
# Anyone cloning desktop standalone (without the sibling checkout) will
# fall through to the git dep and currently cannot build — that's expected
# until shannon-code cuts a release containing those APIs.
[patch."ssh://git@github.com/shannon-agent/shannon-code.git"]
shannon-core = { path = "../shannon-code/crates/shannon-core" }
shannon-types = { path = "../shannon-code/crates/shannon-types" }
shannon-tools = { path = "../shannon-code/crates/shannon-tools" }
shannon-mcp = { path = "../shannon-code/crates/shannon-mcp" }
shannon-skills = { path = "../shannon-code/crates/shannon-skills" }

