[package]
name = "shannon-desktop"
version = "0.7.1"
edition = "2024"
rust-version = "1.88"
description = "Shannon — your AI workspace (Tauri desktop app)"
license = "Apache-2.0"
authors = ["Shannon Agent Contributors"]
repository = "https://github.com/shannon-agent/shannon-agent"
homepage = "https://github.com/shannon-agent/shannon-agent"

[features]
default = ["tauri"]
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-window-state", "dep:tauri-plugin-dialog", "dep:tauri-plugin-notification"]

[dependencies]
# Shannon engine crates — provided by the unified workspace (no git, no SSH, no rev, no patch).
shannon-core   .workspace = true
shannon-engine .workspace = true
shannon-types  .workspace = true
shannon-tools  .workspace = true
shannon-mcp    .workspace = true
shannon-skills .workspace = true
shannon-agents .workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tempfile = "3"
base64 = "0.22"
dirs = "5"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2"  # macOS launchctl probe (gateway_service_probe::default_probe) + dev e2e
toml = "0.8"
lsp-types = "0.95"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
sha2 = "0.10"
rand = "0.8"
qrcode = "0.14"
zip = { version = "2", default-features = false, features = ["deflate"] }
percent-encoding = "2"

tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
mockito = "1"
# Enables `tauri::test::mock_app()` for the supervisor E2E test (cfg(test) alone
# doesn't reach the tauri dependency crate). `test` is an empty gate feature.
tauri = { version = "2", features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", optional = true, features = [] }

[[bench]]
name = "load_tests"
harness = false
path = "benches/load_tests.rs"

[package.metadata.dist]
dist = false

[package.metadata.tauri]
# Tauri build configuration — these settings control the native window
productName = "Shannon Agent"
identifier = "com.shannon-agent.desktop"
window = { title = "Shannon Agent", width = 1200, height = 800, minWidth = 800, minHeight = 600 }