[package]
name = "shannon-agent"
version = "0.2.0"
edition.workspace = true
authors = ["Shannon Team"]
description = "Standalone agent binary for out-of-process agent execution"
license = "MIT"
repository = "https://github.com/shannon-agent/shannon-code"
homepage = "https://github.com/shannon-agent/shannon-code"

[dependencies]
shannon-agents = { path = "../shannon-agents" }
shannon-core = { path = "../shannon-core" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1"
assert_cmd = "2.0"
predicates = "3"
