[package]
name = "shannon-agents"
version = "0.1.0"
edition = "2021"
authors = ["Shannon Team"]
description = "Multi-agent coordination system for Shannon"
license = "MIT"

[dependencies]
shannon-types = { path = "../shannon-types" }
shannon-core = { path = "../shannon-core" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
