[package]
name = "shannon-cli"
version = "0.1.0"
edition = "2024"
description = "CLI interface for Shannon FPGA toolkit"
authors = ["Shannon Project Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shannon-project/shannon"

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
serde_json = "1.0"
shannon-core = { path = "../shannon-core" }
shannon-ui = { path = "../shannon-ui" }
shannon-commands = { path = "../shannon-commands" }
shannon-tools = { path = "../shannon-tools" }

[dev-dependencies]
tokio-test = "0.4"
