[package]
name = "shannon-cli"
version = "0.2.4"
edition = "2024"
description = "AI-powered code assistant with multi-provider LLM support"
authors = ["Shannon Code Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shannon-agent/shannon-code"
homepage = "https://github.com/shannon-agent/shannon-code"

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
similar = "2.6"
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shannon-core = { path = "../shannon-core" }
shannon-ui = { path = "../shannon-ui" }
shannon-commands = { path = "../shannon-commands" }
shannon-tools = { path = "../shannon-tools" }
shannon-skills = { path = "../shannon-skills" }
shannon-agents = { path = "../shannon-agents" }

# Internationalization
rust-i18n = { workspace = true }

# URL scheme support
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3"
mockito = "1.6"
serial_test = { version = "3", features = ["file_locks"] }
rexpect = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "cli_benchmarks"
harness = false
