[package]
name = "shannon-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Local crates
shannon-types = { path = "../shannon-types" }
shannon-core = { path = "../shannon-core" }
shannon-codegen = { path = "../shannon-codegen", default-features = false, features = ["rust", "python", "javascript", "typescript", "go"] }

# Command parsing
nom = "7.1"

# Regex support
regex = "1.10"
once_cell = "1.19"

# Async utilities
futures = "0.3"

# Date/time handling
chrono = "0.4"

# Config file support
dirs = "5.0"
toml = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
