[package]
name = "shannon-core-base"
version = "0.1.0"
edition = "2021"

[dependencies]
shannon-types = { path = "../shannon-types" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
notify = "7"
async-trait = "0.1"
