[package]
name = "shannon-core-diagnostics"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Additional dependencies needed for diagnostics
regex = "1.11"
dirs = "5"
tempfile = "3"
libc = "0.2"

shannon-types = { path = "../shannon-types" }
shannon-core-base = { path = "../shannon-core-base" }
