[package]
name = "shannon-core-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Base foundation
shannon-core-base = { path = "../shannon-core-base" }
shannon-types = { path = "../shannon-types" }
shannon-tool-interface = { path = "../shannon-tool-interface" }

# API for ToolDefinition
shannon-core-api = { path = "../shannon-core-api" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Additional dependencies
dashmap = "6"
regex = "1"
chrono = { workspace = true }
