[package]
name = "shannon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Tool interface
shannon-tool-interface = { path = "../shannon-tool-interface" }

# Sub-crate dependencies
shannon-core-base = { path = "../shannon-core-base" }
shannon-core-api = { path = "../shannon-core-api" }
shannon-core-tools = { path = "../shannon-core-tools" }
shannon-core-query = { path = "../shannon-core-query" }
shannon-core-memory = { path = "../shannon-core-memory" }
shannon-core-plugins = { path = "../shannon-core-plugins" }
shannon-core-features = { path = "../shannon-core-features" }
shannon-core-maintenance = { path = "../shannon-core-maintenance" }
shannon-core-diagnostics = { path = "../shannon-core-diagnostics" }

# HTTP client for Claude API
reqwest = { workspace = true }

# Streaming support
futures = "0.3"
tokio-stream = "0.1"

# State management
dashmap = "6.1"
serde_yaml = "0.9.34"

# Home directory support
dirs = { workspace = true }

# Env file support
dotenvy = { workspace = true }

# Regex for hook matching
regex = "1.11"

# Platform-specific disk space info
libc = "0.2"

# Testing utilities
tempfile = "3.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockito = "1.6"

[[bench]]
name = "query_engine"
harness = false

[[bench]]
name = "core_benchmarks"
harness = false
