[package]
name = "shannon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Tool interface
shannon-tool-interface = { path = "../shannon-tool-interface" }

# Shared types
shannon-types = { path = "../shannon-types" }

# HTTP client for Claude API
reqwest = { workspace = true }

# Streaming support
futures = "0.3"
tokio-stream = "0.1"

# HTTP server
axum = { workspace = true }
tower = "0.4"
tower-http = { workspace = true }

# State management
dashmap = "6.1"
serde_yaml = "0.9.34"

# Home directory support
dirs = { workspace = true }

# Env file support
dotenvy = { workspace = true }

# Regex for hook matching
regex = "1.11"

# Lazy static initialization
once_cell = "1.20"

# Glob pattern matching for tool permissions
globset = "0.4"

# Internationalization
rust-i18n = { workspace = true }
sys-locale = { workspace = true }

# Platform-specific disk space info
libc = "0.2"

# Webhook HMAC verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Testing utilities
tempfile = "3.16"

# LSP integration
lsp-types = "0.95"

# Plugin manifest parsing
toml = "0.8"

# Landlock support (Linux-only, optional)
landlock = { version = "0.4", optional = true }

[features]
default = []
landlock = ["dep:landlock"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockito = "1.6"
tower = "0.5"

[[bench]]
name = "query_engine"
harness = false

[[bench]]
name = "core_benchmarks"
harness = false
