[package]
name = "shannon-engine"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# shannon-engine is the future home of the query engine, state, permissions,
# and compact modules (D1 Phase 2). For PR-A, only `compact` is exposed.
# The code physically remains in shannon-core until its dependency on
# shannon-core's `api`, `hooks`, and `context_budget` modules is resolved
# (either by extracting those modules too, or by stubbing them behind
# traits in shannon-types). This crate re-exports compact now so external
# consumers can begin migrating to the `shannon_engine::compact` path.
shannon-core = { path = "../shannon-core" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
