[package]
name = "shannon-engine"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Shannon shared types
shannon-types = { path = "../shannon-types" }

# HTTP client
reqwest = { workspace = true }

# Async runtime + streaming
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto (Zhipu JWT auth + base64 image encoding)
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
