[package]
name = "shannon-engine"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Shannon shared types
shannon-types = { path = "../shannon-types" }
shannon-tool-interface = { path = "../shannon-tool-interface" }

# HTTP client
reqwest = { workspace = true }

# Async runtime + streaming
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Time
chrono = { workspace = true }

# Concurrent maps (state session storage)
dashmap = "6.1"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto (Zhipu JWT auth + base64 image encoding)
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

# Regex (hooks config matcher)
regex = "1.11"

# Platform directories (hooks config paths)
dirs = { workspace = true }

# Glob pattern matching (permissions rule checker)
globset = "0.4"

# UUID generation (permissions session IDs)
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3.16"
